# Verd

./: .gitignore  CLAUDE.md  DOKUMENTATION.md  README.md  backlog.md  cashflows.csv  fremregning_eksempel.csv  pyproject.toml  todo.md
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
docs/: laeringsforloeb.md
driftsplan/: fremregning_30_A.csv  fremregning_30_B.csv  fremregning_35_A.csv  fremregning_35_B.csv  fremregning_40_A.csv  fremregning_40_B.csv  fremregning_40_C.csv  fremregning_45_A.csv  fremregning_45_B.csv  fremregning_45_C.csv  fremregning_50_A.csv  fremregning_50_B.csv  fremregning_50_C.csv  fremregning_55_A.csv  fremregning_55_B.csv  fremregning_55_C.csv  fremregning_60_A.csv  fremregning_60_B.csv
examples/: eksempel_depotsikring.py  eksempel_fremregning.py  eksempel_plot.py  eksempel_police.py  eksempel_praemieflow.py  fremregning_driftsplan.py
tests/: test_depotsikring.py  test_deterministic_market.py  test_fremregning.py  test_gompertz_makeham.py  test_omkostning.py  test_overgang.py  test_policy.py  test_policy_distribution.py  test_policy_state.py  test_praemieflow.py  test_thiele.py  test_udbetaling.py  test_validering.py
verd/: __init__.py  biometric_model.py  deterministic_market.py  eksportering.py  financial_market.py  fremregning.py  gompertz_makeham.py  offentlige_satser.py  omkostning.py  overgang.py  plot.py  policy.py  policy_distribution.py  policy_state.py  praemieflow.py  risiko.py  thiele.py  udbetaling.py  validering.py
verd/data/: offentlige_satser.csv
(+4 files in other folders)
