[project]
name = "verd"
version = "0.1.0"
description = "Aktuarbibliotek til sandsynlighedsvægtet fremregning af enkeltpolice reserver og cashflows"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24", "matplotlib>=3.7"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
